[project]
name = "yahoo-realtime-search"
version = "0.1.0"
description = "MCP server for Yahoo! JAPAN realtime search."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "httpx>=0.27.0",
    "mcp[cli]>=1.12.4",
]

[project.urls]
Repository = "https://github.com/Hsky16/yahoo_realtime_search"

[project.scripts]
yahoo-realtime-search = "yahoo_realtime_search.server:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
